--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -14,7 +14,7 @@
 <body>
     <aside>
         <img src="{% static 'app/img/img.png' %}" alt="Лого">
-        <span class="logo">itProger</span>
+        <span class="logo">Knowledge</span>
         <h3>Навигация</h3>
         <ul>
             <a href="{% url 'home' %}"><li><i class="fa-solid fa-house"></i> Главная</li></a>
